--- a/.github/workflows/build2.yml
+++ b/.github/workflows/build2.yml
@@ -23,25 +23,28 @@ jobs:
       - name: 安装编译工具链
         run: |
           sudo apt-get update
-          sudo apt-get install -y build-essential mingw-w64 nasm pkg-config \
-                                gcc-mingw-w64-x86-64 g++-mingw-w64-x86-64 \
-                                make automake autoconf libtool
+          # 安装特定版本的 mingw 工具链
+          sudo apt-get install -y build-essential nasm pkg-config \
+                                gcc-mingw-w64-x86-64=9.3-win32 g++-mingw-w64-x86-64=9.3-win32 \
+                                binutils-mingw-w64-x86-64=2.34-6ubuntu1+9.3win32 \
+                                mingw-w64-tools mingw-w64-common
 
       - name: 获取 FFmpeg-AV3A 源代码
         run: |
           git clone https://github.com/tongxunlu/ffmpeg-n4.4.2.git ffmpeg
           cd ffmpeg
           git checkout ${{ github.event.inputs.FFMPEG_RELEASE_BRANCH }}
-          # 修复权限问题
           chmod -R a+x ffbuild/*.sh
           chmod a+x configure
           chmod a+x compat/windows/makedef
 
-      - name: 设置 pkg-config 环境
+      - name: 设置编译环境
         run: |
-          # 手动设置 mingw pkg-config 路径
-          echo "PKG_CONFIG_PATH=/usr/x86_64-w64-mingw32/lib/pkgconfig" >> $GITHUB_ENV
-          echo "PATH=$PATH:/usr/x86_64-w64-mingw32/bin" >> $GITHUB_ENV
+          echo "CC=x86_64-w64-mingw32-gcc-9.3" >> $GITHUB_ENV
+          echo "CXX=x86_64-w64-mingw32-g++-9.3" >> $GITHUB_ENV
+          echo "AR=x86_64-w64-mingw32-ar" >> $GITHUB_ENV
+          echo "STRIP=x86_64-w64-mingw32-strip" >> $GITHUB_ENV
+          echo "PKG_CONFIG=/usr/bin/x86_64-w64-mingw32-pkg-config" >> $GITHUB_ENV
 
       - name: 编译 Windows 版 FFmpeg
         run: |
@@ -58,9 +61,8 @@ jobs:
             --enable-static \
             --disable-shared \
             --enable-version3 \
-            --pkg-config=$(which pkg-config) \
-            --extra-cflags="-I/usr/x86_64-w64-mingw32/include" \
-            --extra-ldflags="-L/usr/x86_64-w64-mingw32/lib"
+            --extra-cflags="-O2 -fno-strict-aliasing" \
+            --extra-ldflags="-static"
           
           make -j$(nproc)
           make install
