--- a/.github/workflows/build2.yml
+++ b/.github/workflows/build2.yml
@@ -23,10 +23,10 @@ jobs:
       - name: 安装编译工具链
         run: |
           sudo apt-get update
-          # 安装特定版本的 mingw 工具链
+          # 安装最新可用的 MinGW 工具链
           sudo apt-get install -y build-essential nasm pkg-config \
-                                gcc-mingw-w64-x86-64=9.3-win32 g++-mingw-w64-x86-64=9.3-win32 \
-                                binutils-mingw-w64-x86-64=2.34-6ubuntu1+9.3win32 \
+                                gcc-mingw-w64-x86-64 g++-mingw-w64-x86-64 \
+                                binutils-mingw-w64-x86-64 \
                                 mingw-w64-tools mingw-w64-common
 
       - name: 获取 FFmpeg-AV3A 源代码
@@ -40,8 +40,8 @@ jobs:
 
       - name: 设置编译环境
         run: |
-          echo "CC=x86_64-w64-mingw32-gcc-9.3" >> $GITHUB_ENV
-          echo "CXX=x86_64-w64-mingw32-g++-9.3" >> $GITHUB_ENV
+          echo "CC=x86_64-w64-mingw32-gcc" >> $GITHUB_ENV
+          echo "CXX=x86_64-w64-mingw32-g++" >> $GITHUB_ENV
           echo "AR=x86_64-w64-mingw32-ar" >> $GITHUB_ENV
           echo "STRIP=x86_64-w64-mingw32-strip" >> $GITHUB_ENV
           echo "PKG_CONFIG=/usr/bin/x86_64-w64-mingw32-pkg-config" >> $GITHUB_ENV
