--- a/.github/workflows/gptok2.yml
+++ b/.github/workflows/gptok2.yml
@@ -1,78 +1,85 @@
-name: 已经可以打包,差dll问题Build Static FFmpeg for Windows
+name: Build Static FFmpeg for Windows
 
 on:
   workflow_dispatch:
 
 jobs:
-  build:
+  build-ffmpeg-static:
     runs-on: windows-latest
 
+    defaults:
+      run:
+        shell: msys2 {0}
+
     steps:
-    - name: Setup MSYS2
-      uses: msys2/setup-msys2@v2
-      with:
-        update: true
-        install: >
-          git
-          base-devel
-          mingw-w64-x86_64-toolchain
-          mingw-w64-x86_64-pkg-config
-          mingw-w64-x86_64-freetype-static
-          mingw-w64-x86_64-libmp3lame-static
-          mingw-w64-x86_64-libopus-static
-          mingw-w64-x86_64-fdk-aac-static
-          mingw-w64-x86_64-bzip2-static
-          mingw-w64-x86_64-x265-static
-          mingw-w64-x86_64-zlib-static
-          yasm
-        msystem: MINGW64
+      - name: Set up MSYS2
+        uses: msys2/setup-msys2@v2
+        with:
+          msystem: MINGW64
+          update: true
+          install: >
+            git
+            base-devel
+            yasm
+            nasm
+            mingw-w64-x86_64-toolchain
+            mingw-w64-x86_64-freetype
+            mingw-w64-x86_64-libmp3lame
+            mingw-w64-x86_64-libopus
+            mingw-w64-x86_64-fdk-aac
+            mingw-w64-x86_64-bzip2
+            mingw-w64-x86_64-x265
+            mingw-w64-x86_64-zlib
+            mingw-w64-x86_64-pkgconf
 
-    - name: Clone FFmpeg
-      shell: msys2 {0}
-      run: |
-        git clone --depth 1 https://git.ffmpeg.org/ffmpeg.git ffmpeg
-        cd ffmpeg
-        mkdir -p /home/runneradmin/bin
+      - name: Checkout FFmpeg source
+        run: |
+          git clone https://github.com/FFmpeg/FFmpeg ffmpeg
+          cd ffmpeg
+          git checkout n6.1 # 指定版本（可改为 main 或其他标签）
 
-    - name: Configure and Build FFmpeg (Static)
-      shell: msys2 {0}
-      run: |
-        cd ffmpeg
-        ./configure \
-          --prefix="$HOME/ffmpeg_build" \
-          --pkg-config-flags="--static" \
-          --extra-cflags="-I$HOME/ffmpeg_build/include -static" \
-          --extra-ldflags="-L$HOME/ffmpeg_build/lib -static" \
-          --extra-libs="-lpthread -lm" \
-          --ld="g++" \
-          --bindir="$HOME/bin" \
-          --disable-shared \
-          --enable-static \
-          --disable-doc \
-          --disable-ffplay \
-          --disable-ffprobe \
-          --disable-avdevice \
-          --disable-network \
-          --disable-debug \
-          --enable-gpl \
-          --enable-libx265 \
-          --enable-libfreetype \
-          --enable-libmp3lame \
-          --enable-libopus \
-          --enable-libfdk-aac \
-          --enable-zlib \
-          --enable-bzlib
+      - name: Configure FFmpeg (static build)
+        run: |
+          cd ffmpeg
+          ./configure \
+            --prefix="$HOME/ffmpeg_build" \
+            --pkg-config-flags="--static" \
+            --extra-cflags="-I$HOME/ffmpeg_build/include -static" \
+            --extra-ldflags="-L$HOME/ffmpeg_build/lib -static" \
+            --extra-libs="-lpthread -lm" \
+            --ld="g++" \
+            --bindir="$HOME/bin" \
+            --disable-shared \
+            --enable-static \
+            --disable-doc \
+            --disable-ffplay \
+            --disable-ffprobe \
+            --disable-avdevice \
+            --disable-network \
+            --disable-debug \
+            --enable-gpl \
+            --enable-libx265 \
+            --enable-libfreetype \
+            --enable-libmp3lame \
+            --enable-libopus \
+            --enable-libfdk-aac \
+            --enable-zlib \
+            --enable-bzlib
 
-        make -j$(nproc)
-        make install
+      - name: Build FFmpeg
+        run: |
+          cd ffmpeg
+          make -j$(nproc)
+          make install
 
-    - name: Copy to workspace
-      shell: msys2 {0}
-      run: |
-        cp $HOME/bin/ffmpeg.exe $GITHUB_WORKSPACE/ffmpeg.exe
+      - name: Show output file
+        run: |
+          echo "Listing $HOME/bin:"
+          ls -lh $HOME/bin
+          file $HOME/bin/ffmpeg.exe
 
-    - name: Upload ffmpeg.exe
-      uses: actions/upload-artifact@v4
-      with:
-        name: ffmpeg-windows-static
-        path: ffmpeg.exe
+      - name: Upload ffmpeg.exe
+        uses: actions/upload-artifact@v4
+        with:
+          name: ffmpeg-windows-static
+          path: ${{ env.HOME }}/bin/ffmpeg.exe
