--- a/.github/workflows/442build.yml
+++ b/.github/workflows/442build.yml
@@ -60,8 +60,8 @@ jobs:
             --disable-asm \
             --enable-gnutls \
             --enable-libfreetype \
-            --enable-av3a  \
-            --enable-libx265 \
+            #--enable-av3a  \
+            #--enable-libx265 \
             --target-os=mingw32 \
             --arch=x86_64 \
             --disable-shared \
