--- a/.github/workflows/gptbuildok.yml
+++ b/.github/workflows/gptbuildok.yml
@@ -66,7 +66,7 @@ jobs:
             --arch=x86_64 \
             --disable-shared \
             --enable-libarcdav3a \
-            --enable-libarcdavs3 \
+            # --enable-libarcdavs3 \
             --enable-static
 
           make -j$(nproc)
