--- a/.github/workflows/gptbuildok.yml
+++ b/.github/workflows/gptbuildok.yml
@@ -65,9 +65,9 @@ jobs:
             --target-os=mingw32 \
             --arch=x86_64 \
             --disable-shared \
-            --enable-libarcdav3a \
+            --enable-libarcdav3a
             # --enable-libarcdavs3 \
-            --enable-static
+            # --enable-static
 
           make -j$(nproc)
           make install
